[Picture in Picture] Make close button fixed size.

This change updates the close button to be a fixed size regardless of
the window size.

Bug: 870186
Change-Id: Ib9de9508cef6f1faea272be7a223a15e86d7ac87
Reviewed-on: https://chromium-review.googlesource.com/1159987
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Commit-Queue: apacible <apacible@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580237}
Former-commit-id: 158b343fd882e310b16ae9c35b6dd9d28b3c4087